# lipsia

./: .gitignore  CMakeLists.txt
cmake/: cmake_uninstall.cmake.in
cmake/Modules/: FindOPENCL.cmake  FindVIA.cmake
debian/: changelog  control  lipsia-dev.install  lipsia-qt3.install  lipsia.install  lipsia.links  lipsia.postinst  rules
doc/html/: index.html
doc/html/vccm/: index.html
doc/html/vsearchlightsvm/: index.html
doc/html/vsl/: index.html
doc/html/vsplitbeta/: index.html
doc/html/vsvm/: index.html
doc/html/vsvmdesign/: conversion.txt  design.txt  design_single.txt  index.html
doc/html/vsvr/: index.html
src/backward_compatibility/niftov/: CMakeLists.txt
src/backward_compatibility/vdeform/: CMakeLists.txt  trilinear.H  util.H  vdeform.C
src/backward_compatibility/vdemon/: CMakeLists.txt  gauss.H  gradient.H  trilinear.H  util.H  vdemon.C
src/backward_compatibility/vdotrans/: CMakeLists.txt  DoTrans.c
src/backward_compatibility/vfunctrans/: CMakeLists.txt  TransTimeStep.c
src/backward_compatibility/vnormalize/: CMakeLists.txt  Normalize.c
src/backward_compatibility/vreg3d/: CMakeLists.txt  GetTransf.c  IniShift.c  Refine.c  Reg3d.c
src/backward_compatibility/vtonifti/: CMakeLists.txt  cniftifile.cpp  cvimage.cpp  cvimage.h  main.cpp
src/backward_compatibility/vzmapborder/: CMakeLists.txt  vzmapborder.c
src/include/: itkAdapter_impl.hpp
src/new/: CMakeLists.txt
src/new/vReHo/: CMakeLists.txt
src/new/valign3d/: CMakeLists.txt  isisRegistrationFactory3D.hpp  isisRegistrationFactory3D_impl.hpp  isisreg3d.cxx
src/new/vccm/: CMakeLists.txt
src/new/vcheckdata/: CMakeLists.txt
src/new/vcompcor/: CMakeLists.txt
src/new/vconvertR/: CMakeLists.txt  vconvertR.cpp  vconvertR_toV.cpp
src/new/vcorr/: CMakeLists.txt
src/new/vcovariates/: CMakeLists.txt
src/new/vdenoise/: CMakeLists.txt
src/new/vdespike/: CMakeLists.txt
src/new/vdotrans3d/: CMakeLists.txt  isisTransformMerger3D.cpp  isisTransformMerger3D.hpp  isisdotrans3d.cxx
src/new/vecm/: CMakeLists.txt  correlation_kernel.cl  vecm.c  vecm.cpp
src/new/veta2/: CMakeLists.txt
src/new/vflip3d/: CMakeLists.txt
src/new/vgaussianize/: CMakeLists.txt
src/new/vglobalmean/: CMakeLists.txt
src/new/vmerge/: CMakeLists.txt  vmerge.cpp
src/new/vmontecarlo_group/: CMakeLists.txt  main2.cpp
src/new/vncm/: CMakeLists.txt
src/new/vnonparam_cluster/: CMakeLists.txt  Label3d.c  Threshold.cpp  Threshold.h  vclusterassess.cpp  vclusterhist.cpp  vthreshold.cpp
src/new/vnormvals/: CMakeLists.txt
src/new/volumeinfo/: CMakeLists.txt
src/new/voverlap/: CMakeLists.txt
src/new/vpaired_ccm/: CMakeLists.txt
src/new/vpaired_ttest/: CMakeLists.txt
src/new/vpowerspectrum/: CMakeLists.txt
src/new/vresiduals/: CMakeLists.txt
src/new/vrmglobal/: CMakeLists.txt
src/new/vselect/: CMakeLists.txt  vselect.cpp
src/new/vsimmat/: CMakeLists.txt
src/new/vspectralcluster/: CMakeLists.txt
src/new/vspectralecm/: CMakeLists.txt
src/new/vsplitbeta/: CMakeLists.txt  vsplitbeta.cpp
src/new/vsrad/: CMakeLists.txt
src/new/vstats/: CMakeLists.txt
src/new/vsvm/: CMakeLists.txt  MriSvm.cpp  MriSvm.h  MriTypes.h  PCA.cpp  PCA.h  SearchLight.cpp  SearchLight.h  vconvertR.cpp  vpca.cpp  vpermutation.cpp  vsearchlightsvm.cpp  vsl.cpp  vsvm.cpp  vsvmdesign.pl  vsvr.cpp
src/new/vsvm/libsvm-dense/: svm-train.c  svm.cpp  svm.h
src/new/vswapdim/: CMakeLists.txt  isisflip.cpp
src/new/vsymmetric/: CMakeLists.txt
src/new/vvinidi/: CMakeLists.txt  isisconv.cpp
src/new/vycorr/: CMakeLists.txt  vycorr.cpp
src/old/brutov2/: CMakeLists.txt  NiftiWriter.C  contrast.h  convert.h
src/old/lib_arfit/: CMakeLists.txt
src/old/lib_lipsia/: CMakeLists.txt  compat.c  compat.h
src/old/lib_vlh/: fenster1.C
src/old/mattov/: CMakeLists.txt
src/old/v2ndlevel/: CMakeLists.txt
src/old/vROIonesample_ttest/: CMakeLists.txt  vROIonesample_ttest.c
src/old/vROIpaired_ttest/: CMakeLists.txt  vROIpaired_ttest.c
src/old/vROIpaired_wilcoxtest/: CMakeLists.txt  vROIpaired_wilcoxtest.c
src/old/vROItwosample_ttest/: CMakeLists.txt  vROItwosample_ttest.c
src/old/vaddcovariates/: CMakeLists.txt
src/old/valphasim/: CMakeLists.txt
src/old/vanonym/: CMakeLists.txt
src/old/varfit/: CMakeLists.txt
src/old/vattrcopy/: CMakeLists.txt
src/old/vattredit/: CMakeLists.txt
src/old/vave/: CMakeLists.txt
src/old/vbayes/: CMakeLists.txt
src/old/vbayesgroup/: CMakeLists.txt
src/old/vblobsize/: BlobSize.c  CMakeLists.txt  Talairach.c
src/old/vbrainmask/: CMakeLists.txt  vbrainmask.c
src/old/vbrainpeel/: CMakeLists.txt  vbrainpeel_impl.c
src/old/vcacp/: CMakeLists.txt
src/old/vcatdesign/: CMakeLists.txt
src/old/vcheckdesign/: CMakeLists.txt
src/old/vcolorglm/: BlockIO.c  CMakeLists.txt  vcolorglm.c
src/old/vconvcoord/: CMakeLists.txt  vconvcoord.c
src/old/vdelcereb/: CMakeLists.txt  vdelcereb.c
src/old/vdifftimecourse/: CMakeLists.txt
src/old/vdistortionCorrection/: CMakeLists.txt
src/old/vdomulticomp/: CMakeLists.txt
src/old/vextractparam/: CMakeLists.txt
src/old/vfdr/: CMakeLists.txt  vfdr.c
src/old/vgauss/: CMakeLists.txt
src/old/vgen_wilcoxtable/: CMakeLists.txt
src/old/vgendesign/: CMakeLists.txt  vgendesign.c
src/old/vgetcontrast/: CMakeLists.txt
src/old/vgetcovariates/: CMakeLists.txt
src/old/vimagemask/: CMakeLists.txt
src/old/vimagetimecourse/: CMakeLists.txt
src/old/visotrop/: CMakeLists.txt  visotrop.c
src/old/vlcorr/: CMakeLists.txt
src/old/vledit/: CMakeLists.txt  datamanager.cpp  main.cpp  vlserverconnection.cpp
src/old/vlserv/: CMakeLists.txt
src/old/vlv/: CMakeLists.txt
src/old/vlview/: CMakeLists.txt
src/old/vmapscale/: CMakeLists.txt  vmapscale.c
src/old/vmaskave/: CMakeLists.txt
src/old/vmaskedit/: CMakeLists.txt  vmaskedit.c
src/old/vmetropolis/: CMakeLists.txt
src/old/vmovcorrection/: CMakeLists.txt  MovCorr.c
src/old/vmovcorrection2d/: ApplyTransform2d.c  CMakeLists.txt
src/old/vmulticomp/: CMakeLists.txt
src/old/vnumave/: CMakeLists.txt
src/scripts/: vnormdata
vpreproc/: vpreproc.py  vpreproc_gui.py
(+44 files in other folders)
