PROJECT(vconvertR)

ADD_EXECUTABLE(vconvertR vconvertR.cpp)
ADD_EXECUTABLE(vconvertR_toV vconvertR_toV.cpp)

TARGET_LINK_LIBRARIES(vconvertR ${VIAIO_LIBRARY} ${LIPSIA_LIBRARY}
    ${GSL_GSL_LIBRARY} ${GSL_CBLAS_LIBRARY})

TARGET_LINK_LIBRARIES(vconvertR_toV ${VIAIO_LIBRARY} ${LIPSIA_LIBRARY}
    ${GSL_GSL_LIBRARY} ${GSL_CBLAS_LIBRARY})

SET_TARGET_PROPERTIES(vconvertR PROPERTIES
                      LINK_FLAGS -Wl)

SET_TARGET_PROPERTIES(vconvertR_toV PROPERTIES
                      LINK_FLAGS -Wl)

INSTALL(TARGETS vconvertR vconvertR_toV
	RUNTIME DESTINATION bin
	COMPONENT RuntimeLibraries)
